UI: Fixed hue-alpha-range overflow

--- a/ui-ngx/src/app/shared/components/color-picker/color-picker.component.scss
+++ b/ui-ngx/src/app/shared/components/color-picker/color-picker.component.scss
@@ -46,6 +46,7 @@
 
       > * {
         height: 18px;
+        overflow: hidden;
         border-radius: 9px;
         border: 1px solid rgba(0, 0, 0, 0.1);
       }
